--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "body-parser": "*",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "dexie": "^2.0.4",
     "express": "*",
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "fcm-node": "^1.3.0",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.5",
+    "localforage": "^1.7.2",
     "method-override": "^3.0.0",
     "mongodb": "*",
     "mongoose": "*",
     "multer": "^1.3.1",
+    "node-localstorage": "^1.3.1",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*"
